# starlib

cmake/: Config.cmake  Dependencies.cmake  Sources.cmake
sources/fastnoise/: CMakeLists.txt  generator.hpp
sources/nanotime/: CMakeLists.txt  nanotime.cpp  nanotime.hpp
sources/pcg/: CMakeLists.txt  pcg_random.hpp
sources/starlib/: CMakeLists.txt
sources/starlib/async/: async.cpp  async.hpp  threadpool.cpp  threadpool.hpp  threadpool_task.cpp  threadpool_task.hpp  time.cpp  time.hpp
sources/starlib/general/: clock.hpp  colors.hpp  gameloop.cpp  gameloop.hpp  graphics.hpp  keycode.hpp  logger.cpp  logger.hpp  random.hpp  resource_manager.cpp  resource_manager.hpp  status.hpp  string.cpp  string.hpp  time.cpp  time.hpp
sources/starlib/input/: input.hpp  virtual_controller.cpp  virtual_controller.hpp  virtual_keyboard.cpp  virtual_keyboard.hpp  virtual_mouse.cpp  virtual_mouse.hpp
sources/starlib/math/: easing.cpp  easing.hpp  frustum.cpp  frustum.hpp  glm.hpp  interpolatable.hpp  math.hpp  noise.hpp  random.hpp
sources/starlib/types/: bitvector.hpp  block_allocator.cpp  block_allocator.hpp  clock.cpp  clock.hpp  gameloop.cpp  gameloop.hpp  index_allocator.hpp  palette_vector.hpp  polymorphic.hpp  sized_numerics.hpp  starlib_stdint.hpp  status.hpp
sources/starlib/utility/: bitvector.cpp  bitvector.hpp  block_allocator.cpp  block_allocator.hpp  clock.cpp  clock.hpp  heap_value.hpp  palette_vector.hpp  polymorphic.hpp  string.cpp  string.hpp  time.hpp
sources/stblib/: CMakeLists.txt  stb_image.hpp  stb_image_write.hpp  stb_libs.cpp
